[tool.poetry]
name = "news-news-news"
version = "0.1.0"
description = ""
authors = ["Matteo <matteo-devel@proton.me>"]

# https://stackoverflow.com/questions/22343224/whats-the-difference-between-tilde-and-caret-in-package-json
[tool.poetry.dependencies]
python = ">=3.11,<4.0"
requests = { version = "^2.28" }
pygooglenews = { git = "https://github.com/t1h0/pygooglenews", branch = "master" }
goose3 = { version = "^3.1" }
fake-useragent = "^1.2.1"

[virtualenvs]
in-project = true